# truthlens

./: .gitignore  README.md
.github/workflows/: pypi-publish.yml  python-ci.yml  release.yml  rust-ci.yml
bridge/: README.md  mapping.md
lean/: lake-manifest.json  lakefile.lean
lean/TruthLens/: Composition.lean  Consistency.lean  Monotonicity.lean  ScoreBounds.lean  Trajectory.lean  Verification.lean
python/: Cargo.toml  README.md  pyproject.toml
python/src/: lib.rs
python/tests/: test_truthlens.py
python/truthlens/: __init__.py  __init__.pyi
rust/: Cargo.toml
rust/src/: claim.rs  consistency.rs  entity.rs  lib.rs  main.rs  mcp.rs  scorer.rs  trajectory.rs
rust/tests/: integration.rs
snap/: snapcraft.yaml
