[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "truthlens"
version = "0.5.0"
description = "AI Hallucination Detector — Formally Verified Trust Scoring for LLM Outputs"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
authors = [{name = "Yabloko Labs"}]
keywords = ["ai", "hallucination", "llm", "fact-checking", "trust"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/yablokolabs/truthlens"
Repository = "https://github.com/yablokolabs/truthlens"

[tool.maturin]
manifest-path = "Cargo.toml"
python-source = "."
module-name = "truthlens._truthlens"
features = ["pyo3/extension-module"]
