[package]
name = "truthlens"
version = "0.1.0"
edition = "2021"
authors = ["Yabloko Labs"]
license = "Apache-2.0"
description = "AI hallucination detector — formally verified trust scoring for LLM outputs"
repository = "https://github.com/yablokolabs/truthlens"
keywords = ["hallucination", "ai", "llm", "fact-checking", "trust"]
categories = ["text-processing", "science"]

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
