[package]
name = "truthlens"
version = "0.5.0"
edition = "2021"
authors = ["Yabloko Labs"]
license = "Apache-2.0"
description = "AI hallucination detector — formally verified trust scoring for LLM outputs"
repository = "https://github.com/yablokolabs/truthlens"
homepage = "https://github.com/yablokolabs/truthlens"
documentation = "https://docs.rs/truthlens"
readme = "../README.md"
keywords = ["hallucination", "ai", "llm", "fact-checking", "trust"]
categories = ["text-processing", "science"]

[features]
default = []
verify = ["ureq"]

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
atty = "0.2"
colored = "2"
ureq = { version = "2", optional = true, features = ["json"] }
